// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<counter/> renders correctly 1`] = `
<section>
  <h3>
    0
  </h3>
  <button
    onClick={[Function]}
  >
    click for counter
  </button>
  <button
    onClick={[Function]}
  >
    click for counter
  </button>
</section>
`;

exports[`Testing our Counter component render correctly to the DOM 1`] = `
<section>
  <h3>
    0
  </h3>
  <button
    className ="one"
    onClick={[Function]}
  >
    n+1
  </button>
  <button
    className ="two"
    onClick={[Function]}
  >
    n-1
  </button>
</section>
`;
